<?xml version="1.0"?>
<package format="2">
  <name>dynamic_tutorials</name>
  <version>1.0.0</version>
  <description>El paquete dinamico es una base que incluye todos los archivos necesarios para crear parametros dinamicos que se puedan utilizar dentro de los nodos que se esten corriendo en el entorno de ROS</description>

  <maintainer email="thingsjimenez@gmail.com">Santiago Jiménez</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/thingsjimenez/ROS</url>
  <author email="thingsjimenez@gmail.com">Santiago Jiménez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
